# cookiecutters

./: .cfnlintrc  Pipfile
.devcontainer/: devcontainer.json
action-aws/{{ cookiecutter.action_name }}/: {{ cookiecutter.action_name }}.yaml
api/: cookiecutter.json
apigw-app/: cookiecutter.json
apigw-app/{{ cookiecutter.app_name }}/: Pipfile
apigw-layer/: cookiecutter.json
apigw-layer/{{ cookiecutter.layer_name }}/: pyproject.toml
apigw-route/: cookiecutter.json
apigw-route/{{ cookiecutter.route_name }}/: router.py
aws-cdk/: cookiecutter.json
aws-cdk-app/: cookiecutter.json
aws-cdk-nested-stack/: cookiecutter.json
aws-cdk-nested-stack-lambda/: cookiecutter.json
aws-cdk-nested-stack-lambda/hooks/: post_gen_project.py
aws-cdk-nested-stack-lambda/{{ cookiecutter.nested_stack_name }}/: {{ cookiecutter.nested_stack_name }}.py
aws-cdk-nested-stack/hooks/: pre_gen_project.py
aws-cdk-nested-stack/{{ cookiecutter.nested_stack_name }}/: {{ cookiecutter.nested_stack_name }}.py
aws-cdk-project/: cookiecutter.json
aws-cdk-stack/: cookiecutter.json
aws-cdk-stack-lambda/: cookiecutter.json
aws-cdk-stack-lambda/hooks/: post_gen_project.py
aws-cdk-stack-lambda/{{ cookiecutter.nested_stack_name }}/: {{ cookiecutter.nested_stack_name }}.py
aws-chalice/: cookiecutter.json
aws-sam/: cookiecutter.json
aws-sam-github-stack/: cookiecutter.json
aws-sam-stack/: cookiecutter.json
cdk/: cookiecutter.json
cdk-http-api/: cookiecutter.json
cdk/{{ cookiecutter.directory }}/runtime/layers/app/: pyproject.toml
ecs-scraper/: cookiecutter.json
gatsby-stack/: cookiecutter.json
github-action-aws/: cookiecutter.json
github-action-gatsby/: cookiecutter.json
github-stack/: cookiecutter.json
http-api-function/: cookiecutter.json
http-api-layer/: cookiecutter.json
lambda-python3.12/: cookiecutter.json
lambda-python3.8/: cookiecutter.json
layer-python3.11/: cookiecutter.json
layer-python3.12/: cookiecutter.json
layer/{{ cookiecutter.layer_name }}/: pyproject.toml
package-python3.11/: cookiecutter.json
package-python3.12/{{ cookiecutter.package_name }}/: Pipfile  pyproject.toml
python-lambda-layer/: cookiecutter.json
python-lambda-layer/{{ cookiecutter.layer_name }}/: pyproject.toml  requirements.in
python-package/: cookiecutter.json
python-package/{{ cookiecutter.package_name }}/: dev-requirements.in  pyproject.toml
(+172 files in other folders)
