[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.0"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "aws-lambda-powertools",
    "sentry-sdk",
]

[dependency-groups]
dev = [
    "aws-cdk-lib",
    "boto3-stubs[full]",
    "mypy",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
