[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = [
  "-vv",
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
