[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.0"
requires-python = ">={{ cookiecutter.python_version }}"

[tool.pytest.ini_options]
addopts = [
  "-vv",
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
