[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[tool.pytest.ini_options]
addopts = [
  "-vv",
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
