[project]
name = "app"
version = "0.0.0"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "sentry-sdk",
    "aws-lambda-powertools",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "aws-cdk-lib",
    "boto3-stubs[full]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
